--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 body{
-    background-color: rgb(20, 24, 28);
+    background-color: #238F51;
 
 }
+.photo{
+    margin-top: 10px;
+}
 
-.about{
-    background-color: antiquewhite;
+.name{
+    background-color: #048BC2;
     position: absolute;
-    width: 270px;
+    top: 50px;
+    left: 10px;
+    padding-left: 140px;
+}
+.about{
+    background-color: #212834;
+    position: absolute;
+    width: 240px;
     height: 100%;
     left: 10px;
     right: 1000px;
@@ -15,7 +25,7 @@ body{
 .information{
     position: absolute;
     height: 100%;
-    left: 280px;
+    left: 250px;
     top: 10px;
     right: 10px;
     background: #FFFFFF;
@@ -27,9 +37,11 @@ body{
     color: rgb(162, 1, 1);
     left:15%;
     top: 17%;
+    margin: 0px 0px 0px;
     font-family: 'Asap', sans-serif;
     font-family: 'Hind', sans-serif;
     font-family: 'Open Sans', sans-serif;
+    font-family: 'Sofia Sans Condensed', sans-serif;
     
 }
 .description{
@@ -37,5 +49,10 @@ body{
     position: absolute;
     top: 25%;
     left: 15%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lora', serif;
+
+}
+
+.contact{
+    position: absolute;
 }
