--- a/style.css
+++ b/style.css
@@ -1,58 +1,32 @@
+
 body{
-    background-color: #238F51;
+    background-color: aliceblue;
+}
+
+.body{
+    background-color: #ffffff;
+    position: absolute;
+    height: 1319px;
+    width: 1150px;
+    left: 50px;
+    top: 40px;
 
 }
-.photo{
-    margin-top: 10px;
+
+.about{
+    position:absolute;
+    background-color: #212834;
+    padding-bottom: 746px;
 }
 
 .name{
-    background-color: #048BC2;
+    background-color: bisque;
     position: absolute;
-    top: 50px;
-    left: 10px;
-    padding-left: 140px;
+    margin-left: 300px;
 }
-.about{
-    background-color: #212834;
+.inf{
+    background-color: aqua;
     position: absolute;
-    width: 240px;
-    height: 100%;
-    left: 10px;
-    right: 1000px;
-    top: 10px;
-}
-.information{
-    position: absolute;
-    height: 100%;
-    left: 250px;
-    top: 10px;
-    right: 10px;
-    background: #FFFFFF;
-    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.3);
-}
-.about_me{
-    background-color: beige;
-    position: absolute;
-    color: rgb(162, 1, 1);
-    left:15%;
-    top: 17%;
-    margin: 0px 0px 0px;
-    font-family: 'Asap', sans-serif;
-    font-family: 'Hind', sans-serif;
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Sofia Sans Condensed', sans-serif;
-    
-}
-.description{
-    background-color: aquamarine;
-    position: absolute;
-    top: 25%;
-    left: 15%;
-    font-family: 'Lora', serif;
-
-}
-
-.contact{
-    position: absolute;
+    margin-top: 300px;
+    margin-left: 350px;
 }
