--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
 body{
-    background-color: aquamarine;
-
+    position: absolute;
+    width: 1200px;
+    height: 819px;
+    left: 30px;
+    top: 20px;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
+
+.information{
+    position: absolute;
+    background-color: antiquewhite;
+    margin-top: 20%;
+    margin-left: 30%;
+    
+}
+
 
 .about{
-    background-color: antiquewhite;
     position: absolute;
-    width: 370px;
-    height: 1319px;
-    left: 40px;
-    top: 40px;
-}
-.information{
-
-    position: absolute;
- 
-    height: 1319px;
-    left: 440px;
-    top: 40px;
-
-    background: #FFFFFF;
-    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+    background-color: #212834;
+    padding-bottom: 35%;
+    padding-top: 20px;
+    padding-left: 3%;
+    padding-right: 30px;
 }
