--- a/style.css
+++ b/style.css
@@ -16,6 +16,20 @@ body{
     padding-right: 0px;
 }
 
+.telefon{
+    position: absolute;
+    color: rgb(255, 255, 255);
+    margin-top: 15px;
+    margin-left: 20%;
+    text-decoration: none;
+}
+
+.ul{
+    margin-top: 40px;
+    margin-left: -30%;
+}
+
+
 .photo{
     float:left;
     overflow:hidden; /* this is important */
@@ -54,6 +68,8 @@ body{
 
 .skil{
     position: absolute;
+    top: 60%;
+    left: 40px;
 }
 
 .developer{
@@ -66,14 +82,14 @@ body{
 .information{
     position: absolute;
     font-size: 20px;
-
     margin-top: 30%;
-    margin-left: 35%;
+    margin-left: 30%;
+    margin-right: 10%;
 }
 
 .contact{
     position: absolute;
-    margin-top: 330px;
+    margin-top: 290px;
     margin-left: 20px;
 }
 
@@ -87,4 +103,40 @@ body{
 
 .telega{
     color: rgb(255, 255, 255);
+    text-decoration: none;
 }
+
+.mail{
+    position: absolute;
+    top: 35px;
+    left: 30px;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+ul{
+    color: #c57e04;
+    margin-top: 2px;
+}
+
+ul a{
+    text-decoration: none;
+    margin-top: 40px;
+    color: #ffffff;
+}
+
+.color_1{
+    font-size: 20px;
+    color: #ffffff;
+    font-family: 'Heebo', sans-serif;
+    margin-left: 10px;
+
+}
+
+li{
+    color: #c57e04;
+}
+li span{
+    color: #ffffff;
+}
+
